# dotfiles

./: .bash_profile  .gitignore  .gitmodules  .pyhistory  .shellcheckrc  .vimrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README-dot.md  README.md  REFACTORING_TODO.md  dot.py  dotfiles.json  dotfiles.yaml  install.sh  pyproject.toml  requirements.txt  runme.sh
.github/workflows/: claude-on-mention.yml  claude-pr-review.yml  requirements-quality.txt  (+1 more)
.pystartup/: .pystartup
.vim/: .netrwhist
autocomplete/: .gitignore  .hg-completion.bash  apex.bash
bash/: aliases.sh  asdf.sh  bash_gpg  bash_profile  bashrc  cache.sh  chef.sh  colors.sh  direnv.sh  dotfiles.sh  fetch_autocompleters.sh  history.sh  path.sh  platform.sh  prompt.sh  shell.sh  ssh.sh  version.sh  volta.sh
bashrc/: .bash_profile
claude/: CLAUDE.md  settings.json
darwin/: .bash_profile
debian/: .bash_profile  .bashrc
docs/: ENGINEERING_STANDARDS.md
git/: .gitconfig  gitconfig  gitignore_global
homebrew/: homebrew.sh
karabiner/: karabiner.json  karabiner.sh
lib/: dot-extensions.sh
osx/: inputrc  osx.sh
sourceme/: todo.sh
term/: iterm2.sh
tests/: conftest.py  test-baseline.bats  test-benchmark.bats  test-extensions.bats  test-tmux-claude-capture.bats  test-tmux-claude-inject.bats  test-tmux-claude-install.bats  test-tmux-claude-registry.bats  test-tmux-persistence.bats  test-validate.bats  test_dotfiles.py
tmux/: tmux.conf  tmuxline.conf
tmux-claude-resume/: README.md  install-hook.sh  record-tmux-session.sh  registry.sh  resurrect-inject-claude-resume.sh
ubuntu/: .bash_aliases  .bash_profile  .bashrc
vim/: vimrc
(+53 files in other folders)
