[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dot"
version = "1.0.0"
description = "Zero-dependency dotfiles symlink manager"
readme = "README-dot.md"
requires-python = ">=2.7"
license = {text = "MIT"}
authors = [
    {name = "Sam Stavinoha", email = "hi@stav.xyz"}
]
keywords = ["dotfiles", "symlink", "configuration", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/stavxyz/dotfiles"
Repository = "https://github.com/stavxyz/dotfiles"
Issues = "https://github.com/stavxyz/dotfiles/issues"

[project.scripts]
dot = "dot:main"

[tool.setuptools]
py-modules = ["dot"]
